--- a/LannuttiFamilyCookbook.tex
+++ b/LannuttiFamilyCookbook.tex
@@ -8,36 +8,50 @@
 \begin{document}
 
 \begin{recipe}{Dinner Rolls}{24 Portions}{45 Minutes}
-Preheat oven to 400\degrees{} F.
-
-\ingredient[4]{Cups}{Flour}
-\ingredient[1]{Packet}{Instant Yeast}
-\ingredient[1/3]{Cup}{Sugar}
-\ingredient[1]{tsp}{Salt}
-\ingredient[1 1/2]{Cups}{Warm Milk}
-\ingredient[5]{tbsp}{Melted Butter}
-\ingredient[1]{}{Egg}
-Combine flour, yeast, sugar, salt, warm milk, butter, and egg in a bowl.
-As you mix, incorporate 1/2 cup of flour until ball of dough is formed.
-Dough needs to be slightly sticky and soft. Put dough in greased bowl
-and cover with towel for 30 minutes at room temperature. Remove towel
-and deflate dough lightly. Punch it. Put 2 Ounce balls of dough on
-greased pan. Put in oven for 12--15 minutes or until golden brown.
+    Preheat oven to 400\degrees{} F.
+    \ingredient[4]{Cups}{Flour}
+    \ingredient[1]{Packet}{Instant Yeast}
+    \ingredient[1/3]{Cup}{Sugar}
+    \ingredient[1]{tsp}{Salt}
+    \ingredient[1 1/2]{Cups}{Warm Milk}
+    \ingredient[5]{tbsp}{Melted Butter}
+    \ingredient[1]{}{Egg}
+    Combine flour, yeast, sugar, salt, warm milk, butter, and egg in a bowl.
+    As you mix, incorporate 1/2 cup of flour until ball of dough is formed.
+    Dough needs to be slightly sticky and soft. Put dough in greased bowl
+    and cover with towel for 30 minutes at room temperature. Remove towel
+    and deflate dough lightly. Punch it. Put 2 Ounce balls of dough on
+    greased pan. Put in oven for 12--15 minutes or until golden brown.
 \end{recipe}
 
 \begin{recipe}{Sourdough Biscuits}{}{495 --- 1455 minutes}
-Preheat oven to 400\degrees{} F.
-\ingredient[8]{tbsp}{Butter}
-Chop up cold butter into chunks and add to bowl.
-\ingredient[2]{Cups}{Flour}
-Add flour to the butter. Cut butter into flour using hands.
-\ingredient[1]{Cup}{Sourdough discard}
-\ingredient[1]{tbsp}{Sugar}
-\ingredient[1/2]{Cup}{Milk}
-Add Sourdough discard, sugar, and milk to bowl and mix. Cover with a towl and let rest 8--24 hours.
-\ingredient[1]{tsp}{Baking Soda}
-\ingredient[2]{tsp}{Baking Powder}
-Add baking soda and baking powder. Cut into biscuit shape and cook at 400\degrees{} F for 15--20 minutes.
+    Preheat oven to 400\degrees{} F.
+    \ingredient[8]{tbsp}{Butter}
+    Chop up cold butter into chunks and add to bowl.
+    \ingredient[2]{Cups}{Flour}
+    Add flour to the butter. Cut butter into flour using hands.
+    \ingredient[1]{Cup}{Sourdough discard}
+    \ingredient[1]{tbsp}{Sugar}
+    \ingredient[1/2]{Cup}{Milk}
+    Add Sourdough discard, sugar, and milk to bowl and mix. Cover with a towl and let rest 8--24 hours.
+    \ingredient[1]{tsp}{Baking Soda}
+    \ingredient[2]{tsp}{Baking Powder}
+    Add baking soda and baking powder. Cut into biscuit shape and cook at 400\degrees{} F for 15--20 minutes.
+\end{recipe}
+
+\begin{recipe}{Sourdough Pancakes}{8 Pancakes}{}
+    \ingredient[190]{grams}{Flour}
+    \ingredient[2]{tbsp}{Sugar}
+    \ingredient[1/2]{tsp}{Salt}
+    \ingredient[240]{grams}{Sourdough discard}
+    \ingredient[2]{}{Eggs}
+    \ingredient[1]{Cup}{Milk}
+    \ingredient[3]{tbsp}{Melted Butter}
+    Combine wet and dry ingredients and whisk. Cover and chill over night.
+
+    \ingredient[2]{tsp}{Baking Powder}
+    \ingredient[1]{tsp}{Baking Soda}
+    Add baking soda and baking powder. Then cook. Should be bubbly.
 \end{recipe}
 
 \end{document}
