--- a/recipes/DinnerRolls.tex
+++ b/recipes/DinnerRolls.tex
@@ -1,4 +1,5 @@
-\documentclass[../LannuttiFamilyCookbook.tex]{subfiles}
+\documentclass[../main.tex]{subfiles}
+
 \begin{document}
 
 \begin{recipe}{Dinner Rolls}{24 Portions}{45 Minutes}
