Add missing subfiles package in main.tex

--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,7 @@
 \usepackage{microtype}
 \usepackage[subpreambles=true]{standalone}
 \usepackage{import}
+\usepackage{subfiles}
 
 \title{Lannutti Family Cookbook}
 \author{Cortney Elizabeth Lannutti}
