Added pancake recipe

--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,7 @@
 \import{recipes/}{DinnerRolls}
 \import{recipes/}{SourdoughBiscuits}
 \import{recipes/}{SourdoughPancakes}
+\import{recipes/}{Pancakes}
 
 
 \end{document}
