Fix servings for pancakes recipe

--- a/recipes/Pancakes.tex
+++ b/recipes/Pancakes.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 
-\begin{recipe}{Pancakes}{6 Pancakes}{}
+\begin{recipe}{Pancakes}{Serves 6}{}
     \ingredient[1 1/2]{Cup}{Flour}
     \ingredient[3 1/2]{tsp}{Baking Powder}
     \ingredient[1/4]{tsp}{Salt}
