--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,7 @@
 \import{recipes/}{SourdoughBiscuits}
 \import{recipes/}{SourdoughPancakes}
 \import{recipes/}{Pancakes}
+\import{recipes/}{FrenchToast}
 
 
 \end{document}
