Fix wife's crackhead sourdough bread recipe

--- a/recipes/SourdoughBread.tex
+++ b/recipes/SourdoughBread.tex
@@ -3,6 +3,7 @@
 \begin{document}
 
 \begin{recipe}{Sourdough Bread}{}{}
+
     \ingredient[250]{g}{Water}
     \ingredient[150]{g}{Sourdough Discard}
     \ingredient[25]{g}{Oil}
@@ -11,7 +12,11 @@
     \ingredient[10]{g}{Sea Salt}
     Add flour and salt to mixture. Squash mixture for flour to
     absorb water. Cover and let rest for 30 minutes. Let dough
-    rise until it has doubled in size.
+    rise until it has doubled in size. Once it has risen, work
+    dough and wait an hour for it to rise a second time. Preheat
+    oven to 400\degrees{} F. Bake in covered pot for 20 minutes.
+    Then uncover the pot and bake for an additional 40 minutes.
+    Let the bread cool before cutting.
 \end{recipe}
 
 \end{document}
