--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,7 @@
 \import{recipes/}{Pancakes}
 \import{recipes/}{FrenchToast}
 \import{recipes/}{SourdoughBread}
+\import{recipes/}{RanchDressing}
 
 
 \end{document}
