Added Beer Bread recipe

--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,7 @@
 \import{recipes/}{SourdoughBread}
 \import{recipes/}{RanchDressing}
 \import{recipes/}{RefrigeratorYeastBiscuits}
+\import{recipes/}{BeerBread}
 
 
 \end{document}
