Added French Bread recipe

--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,7 @@
 \import{recipes/}{RefrigeratorYeastBiscuits}
 \import{recipes/}{BeerBread}
 \import{recipes/}{BreadDippingOil}
+\import{recipes/}{FrenchBread}
 
 
 \end{document}
