Added links to ToC

--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,14 @@
 \usepackage[subpreambles=true]{standalone}
 \usepackage{import}
 \usepackage{subfiles}
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks,
+    citecolor=black,
+    filecolor=black,
+    linkcolor=black,
+    urlcolor=black
+}
 
 \title{Lannutti Family Cookbook}
 \author{Cortney Elizabeth Lannutti}
