Improve use of hyperref package

--- a/main.tex
+++ b/main.tex
@@ -7,14 +7,8 @@
 \usepackage[subpreambles=true]{standalone}
 \usepackage{import}
 \usepackage{subfiles}
-\usepackage{hyperref}
-\hypersetup{
-    colorlinks,
-    citecolor=black,
-    filecolor=black,
-    linkcolor=black,
-    urlcolor=black
-}
+\usepackage[hidelinks]{hyperref}
+\hypersetup{}
 
 \title{Lannutti Family Cookbook}
 \author{Cortney Elizabeth Lannutti}
