--- a/main.tex
+++ b/main.tex
@@ -34,6 +34,7 @@
 \import{recipes/}{FrenchBread}
 \import{recipes/}{OrangeMarmalade}
 \import{recipes/}{SourdoughTortillas}
+\import{recipes/}{CaramelSauce}
 
 
 \end{document}
