--- a/recipes/FrenchBread.tex
+++ b/recipes/FrenchBread.tex
@@ -12,7 +12,7 @@
     \ingredient[5 --- 6]{Cups}{Flour}
     \ingredient[2 1/2]{tsp}{Salt}
     Place 2 cups of flour in the mixing bowl with salt.
-    Stir in yeast mixture and begin to kneed by hand.
+    Stir in yeast mixture and begin to knead by hand.
     Add 1/2 cup of remaining flour at a time until the
     dough is smooth but not sticky.
     \ingredient[1]{tsp}{Olive Oil}
