--- a/recipes/RefrigeratorYeastBiscuits.tex
+++ b/recipes/RefrigeratorYeastBiscuits.tex
@@ -14,7 +14,7 @@
     \ingredient[4 1/2]{Cups}{Flour}
     Preheat oven to 400\degrees{} F. Mix buttermilk, oil, sugar, baking
     soda, baking powder, and flour with yeast and water mixture.
-    Refrigerate in a covered bowl. Pinch off amount needed and kneed
+    Refrigerate in a covered bowl. Pinch off amount needed and knead
     very little. Roll and cut out biscuits. Bake for about 15 minutes.
 \end{recipe}
 
