Added recipe for Dry Rub for Ribs

--- a/main.tex
+++ b/main.tex
@@ -35,6 +35,7 @@
 \import{recipes/}{OrangeMarmalade}
 \import{recipes/}{SourdoughTortillas}
 \import{recipes/}{CaramelSauce}
+\import{recipes/}{DryRubForRibs}
 
 
 \end{document}
