Fix missing ingredient in tortilla recipe

--- a/recipes/SourdoughTortillas.tex
+++ b/recipes/SourdoughTortillas.tex
@@ -3,6 +3,7 @@
 \begin{document}
 
 \begin{recipe}{Sourdough Tortillas}{}{}
+    \ingredient[3]{Cups}{Flour}
     \ingredient[1]{Cup}{Sourdough Discard}
     \ingredient[3/4]{Cup}{Water}
     \ingredient[1/4]{Cup}{Oil}
