Added Lime Rice recipe

--- a/main.tex
+++ b/main.tex
@@ -36,6 +36,7 @@
 \import{recipes/}{SourdoughTortillas}
 \import{recipes/}{CaramelSauce}
 \import{recipes/}{DryRubForRibs}
+\import{recipes/}{LimeRice}
 
 
 \end{document}
