Added Cranberry Orange Muffin recipe

--- a/main.tex
+++ b/main.tex
@@ -40,6 +40,7 @@
 \import{recipes/}{BeefKabobMarinade}
 \import{recipes/}{SteakMarinade}
 \import{recipes/}{PorkChopSeasoning}
+\import{recipes/}{CranberryOrangeMuffins}
 
 
 \end{document}
