Added Fire Crackers recipe

--- a/main.tex
+++ b/main.tex
@@ -41,6 +41,7 @@
 \import{recipes/}{SteakMarinade}
 \import{recipes/}{PorkChopSeasoning}
 \import{recipes/}{CranberryOrangeMuffins}
+\import{recipes/}{FireCrackers}
 
 
 \end{document}
