Added pressure cooker applesauce recipe

--- a/main.tex
+++ b/main.tex
@@ -42,6 +42,7 @@
 \import{recipes/}{PorkChopSeasoning}
 \import{recipes/}{CranberryOrangeMuffins}
 \import{recipes/}{FireCrackers}
+\import{recipes/}{PressureCookerApplesauce}
 
 
 \end{document}
