Added black beans recipe

--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,7 @@
 
 \import{recipes/}{BeefKabobMarinade}
 \import{recipes/}{BeerBread}
+\import{recipes/}{BlackBeans}
 \import{recipes/}{BreadDippingOil}
 \import{recipes/}{CaramelSauce}
 \import{recipes/}{CranberryOrangeMuffins}
