Added Bacon Fried Cabbage recipe

--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,7 @@
 \newpage
 \pagenumbering{arabic}
 
+\import{recipes/}{BaconFriedCabbage}
 \import{recipes/}{BeefKabobMarinade}
 \import{recipes/}{BeerBread}
 \import{recipes/}{BlackBeans}
