--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
 \usepackage[hidelinks]{hyperref}
 \hypersetup{}
 
-\title{Cortney's Crackhoe Cookbook}
+\title{Cortney's Cookbook}
 \author{Cortney Elizabeth Lannutti}
 \date{}
 
