Added recipe for brown butter baked haddock

--- a/main.tex
+++ b/main.tex
@@ -26,6 +26,7 @@
 \import{recipes/}{BeerBread}
 \import{recipes/}{BlackBeans}
 \import{recipes/}{BreadDippingOil}
+\import{recipes/}{BrownButterBakedHaddock}
 \import{recipes/}{CaramelSauce}
 \import{recipes/}{CranberryOrangeMuffins}
 \import{recipes/}{DinnerRolls}
