Added Bear Fried Rice recipe

--- a/main.tex
+++ b/main.tex
@@ -22,6 +22,7 @@
 \pagenumbering{arabic}
 
 \import{recipes/}{BaconFriedCabbage}
+\import{recipes/}{BearFriedRice}
 \import{recipes/}{BeefKabobMarinade}
 \import{recipes/}{BeerBread}
 \import{recipes/}{BlackBeans}
