Added bitchen Chocolate Chip Cookies recipe

--- a/main.tex
+++ b/main.tex
@@ -29,6 +29,7 @@
 \import{recipes/}{BreadDippingOil}
 \import{recipes/}{BrownButterBakedHaddock}
 \import{recipes/}{CaramelSauce}
+\import{recipes/}{ChocolateChipCookies}
 \import{recipes/}{CranberryOrangeMuffins}
 \import{recipes/}{DinnerRolls}
 \import{recipes/}{DryRubForRibs}
