bold 'barely' in chocolate chip cookie recipe

--- a/recipes/ChocolateChipCookies.tex
+++ b/recipes/ChocolateChipCookies.tex
@@ -23,8 +23,8 @@
     Add chocolate chips and mix well. Roll 2 -- 3 tbsp balls of dough, flatten
     slightly and then place them evenly spaced on your prepared cookie sheets.
     Bake in preheated oven for approximately 8 -- 10 minutes. Take them out
-    when they are just barely starting to turn brown. Let them sit on the
-    baking pan for 2 minutes before removing to cooling rack.
+    when they are just \textbf{barely} starting to turn brown. Let them sit on
+    the baking pan for 2 minutes before removing to cooling rack.
 
 \end{recipe}
 
