Added recipe for "Dump Cake"

--- a/main.tex
+++ b/main.tex
@@ -33,6 +33,7 @@
 \import{recipes/}{CranberryOrangeMuffins}
 \import{recipes/}{DinnerRolls}
 \import{recipes/}{DryRubForRibs}
+\import{recipes/}{DumpCake}
 \import{recipes/}{FireCrackers}
 \import{recipes/}{FrenchBread}
 \import{recipes/}{FrenchToast}
