Added recipe for "Chocolate Mice"

--- a/main.tex
+++ b/main.tex
@@ -30,6 +30,7 @@
 \import{recipes/}{BrownButterBakedHaddock}
 \import{recipes/}{CaramelSauce}
 \import{recipes/}{ChocolateChipCookies}
+\import{recipes/}{ChocolateMice}
 \import{recipes/}{CranberryOrangeMuffins}
 \import{recipes/}{DinnerRolls}
 \import{recipes/}{DryRubForRibs}
