Added "Coconut Cream Pie" recipe

--- a/main.tex
+++ b/main.tex
@@ -31,6 +31,7 @@
 \import{recipes/}{CaramelSauce}
 \import{recipes/}{ChocolateChipCookies}
 \import{recipes/}{ChocolateMice}
+\import{recipes/}{CoconutCreamPie}
 \import{recipes/}{CranberryOrangeMuffins}
 \import{recipes/}{DinnerRolls}
 \import{recipes/}{DryRubForRibs}
