Added "Vanilla Coffee Syrup" recipe

--- a/main.tex
+++ b/main.tex
@@ -52,6 +52,7 @@
 \import{recipes/}{SourdoughPancakes}
 \import{recipes/}{SourdoughTortillas}
 \import{recipes/}{SteakMarinade}
+\import{recipes/}{VanillaCoffeeSyrup}
 
 
 \end{document}
