Added "Simple Coffee Syrup" recipe

--- a/main.tex
+++ b/main.tex
@@ -47,6 +47,7 @@
 \import{recipes/}{PressureCookerApplesauce}
 \import{recipes/}{RanchDressing}
 \import{recipes/}{RefrigeratorYeastBiscuits}
+\import{recipes/}{SimpleCoffeeSyrup}
 \import{recipes/}{SourdoughBiscuits}
 \import{recipes/}{SourdoughBread}
 \import{recipes/}{SourdoughPancakes}
