Added "Caramel Coffee Syrup" recipe

--- a/main.tex
+++ b/main.tex
@@ -28,6 +28,7 @@
 \import{recipes/}{BlackBeans}
 \import{recipes/}{BreadDippingOil}
 \import{recipes/}{BrownButterBakedHaddock}
+\import{recipes/}{CaramelCoffeeSyrup}
 \import{recipes/}{CaramelSauce}
 \import{recipes/}{ChocolateChipCookies}
 \import{recipes/}{ChocolateMice}
