--- a/cookbook.tex
+++ b/cookbook.tex
@@ -54,6 +54,7 @@
 \import{recipes/}{SourdoughPancakes}
 \import{recipes/}{SourdoughTortillas}
 \import{recipes/}{SteakMarinade}
+\import{recipes/}{TripleMelonSmoothie}
 \import{recipes/}{VanillaCoffeeSyrup}
 
 
