Added "Watermelon Strawberry Smoothie" recipe

--- a/cookbook.tex
+++ b/cookbook.tex
@@ -57,6 +57,7 @@
 \import{recipes/}{SteakMarinade}
 \import{recipes/}{TripleMelonSmoothie}
 \import{recipes/}{VanillaCoffeeSyrup}
+\import{recipes/}{WatermelonStrawberrySmoothie}
 
 
 \end{document}
