Added "Yogurt" recipe

--- a/cookbook.tex
+++ b/cookbook.tex
@@ -58,6 +58,7 @@
 \import{recipes/}{TripleMelonSmoothie}
 \import{recipes/}{VanillaCoffeeSyrup}
 \import{recipes/}{WatermelonStrawberrySmoothie}
+\import{recipes/}{Yogurt}
 
 
 \end{document}
