Added "Egg Drop Soup" recipe

--- a/cookbook.tex
+++ b/cookbook.tex
@@ -37,6 +37,7 @@
 \import{recipes/}{DinnerRolls}
 \import{recipes/}{DryRubForRibs}
 \import{recipes/}{DumpCake}
+\import{recipes/}{EggDropSoup}
 \import{recipes/}{FireCrackers}
 \import{recipes/}{FrenchBread}
 \import{recipes/}{FrenchToast}
