--- a/cookbook.tex
+++ b/cookbook.tex
@@ -57,6 +57,7 @@
 \import{recipes/}{SourdoughPancakes}
 \import{recipes/}{SourdoughTortillas}
 \import{recipes/}{SteakMarinade}
+\import{recipes/}{StirFry}
 \import{recipes/}{TripleMelonSmoothie}
 \import{recipes/}{VanillaCoffeeSyrup}
 \import{recipes/}{WatermelonStrawberrySmoothie}
