Added bean burrito recipe

--- a/cookbook.tex
+++ b/cookbook.tex
@@ -22,6 +22,7 @@
 \pagenumbering{arabic}
 
 \import{recipes/}{BaconFriedCabbage}
+\import{recipes/}{BeanBurritos}
 \import{recipes/}{BearFriedRice}
 \import{recipes/}{BeefKabobMarinade}
 \import{recipes/}{BeerBread}
