Added enchilada sauce recipe

--- a/cookbook.tex
+++ b/cookbook.tex
@@ -39,6 +39,7 @@
 \import{recipes/}{DryRubForRibs}
 \import{recipes/}{DumpCake}
 \import{recipes/}{EggDropSoup}
+\import{recipes/}{EnchiladaSauce}
 \import{recipes/}{FireCrackers}
 \import{recipes/}{FrenchBread}
 \import{recipes/}{FrenchToast}
