--- a/cookbook.tex
+++ b/cookbook.tex
@@ -31,6 +31,7 @@
 \import{recipes/}{BrownButterBakedHaddock}
 \import{recipes/}{CaramelCoffeeSyrup}
 \import{recipes/}{CaramelSauce}
+\import{recipes/}{ChickenEnchiladaCasarole}
 \import{recipes/}{ChocolateChipCookies}
 \import{recipes/}{ChocolateMice}
 \import{recipes/}{CoconutCreamPie}
