--- a/cookbook.tex
+++ b/cookbook.tex
@@ -46,6 +46,7 @@
 \import{recipes/}{FrenchToast}
 \import{recipes/}{LimeRice}
 \import{recipes/}{MidoriSours}
+\import{recipes/}{MixedBerryJam}
 \import{recipes/}{OldFashionedApplePie}
 \import{recipes/}{OrangeMarmalade}
 \import{recipes/}{Pancakes}
