Added another Caramel Sauce recipe

--- a/cookbook.tex
+++ b/cookbook.tex
@@ -30,7 +30,8 @@
 \import{recipes/}{BreadDippingOil}
 \import{recipes/}{BrownButterBakedHaddock}
 \import{recipes/}{CaramelCoffeeSyrup}
-\import{recipes/}{CaramelSauce}
+\import{recipes/}{CaramelSauceVersion1}
+\import{recipes/}{CaramelSauceVersion2}
 \import{recipes/}{ChickenEnchiladaCasarole}
 \import{recipes/}{ChocolateChipCookies}
 \import{recipes/}{ChocolateMice}
