--- a/recipes/CaramelSauceVersion1.tex
+++ b/recipes/CaramelSauceVersion1.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 
-\begin{recipe}{Caramel Sauce}{}{}
+\begin{recipe}{Caramel Sauce Version 1}{}{}
     \ingredient[2]{tbsp}{Butter}
     \ingredient[1/2]{Cup}{Brown Sugar}
     \ingredient[1/4]{Cup}{half and half}
