Added more recipes

--- a/cookbook.tex
+++ b/cookbook.tex
@@ -33,10 +33,13 @@
 \import{recipes/}{CaramelSauceVersion1}
 \import{recipes/}{CaramelSauceVersion2}
 \import{recipes/}{ChickenEnchiladaCasarole}
+\import{recipes/}{ChickenPestoPasta}
 \import{recipes/}{ChocolateChipCookies}
 \import{recipes/}{ChocolateMice}
+\import{recipes/}{ChocolateSauce}
 \import{recipes/}{CoconutCreamPie}
 \import{recipes/}{CranberryOrangeMuffins}
+\import{recipes/}{DeeryCheeseSteaks}
 \import{recipes/}{DinnerRolls}
 \import{recipes/}{DryRubForRibs}
 \import{recipes/}{DumpCake}
